--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "transaction-summary",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
@@ -17,6 +18,7 @@
     "@types/react-dom": "^18.2.4",
     "axios": "^1.4.0",
     "fetch-mock": "^9.11.0",
+    "gh-pages": "^5.0.0",
     "jest-fetch-mock": "^3.0.3",
     "mui": "^0.0.1",
     "react": "^18.2.0",
@@ -33,7 +35,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
