--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "transaction-summary",
   "version": "0.1.0",
   "private": true,
-  "homepage": "./",
+  "homepage": "http://zdubin.github.io/transaction-summary",
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
